# opentext-alm-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/alm_mcp/: __init__.py  alm_client.py  config.py  server.py
