[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alm-mcp"
version = "0.1.0"
description = "HP ALM MCP Server — exposes ALM Test Plan, Test Lab, Defects, and Requirements as MCP tools for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["alm", "quality-center", "mcp", "ai-agent", "testing", "qa-automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "requests>=2.31.0",
    "pydantic-settings>=2.4.0",
    "urllib3>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/alm-mcp"
Issues   = "https://github.com/YOUR_USERNAME/alm-mcp/issues"

[project.scripts]
alm-mcp = "alm_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/alm_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "S", "B"]
ignore = ["S101", "S501"]  # assert in tests, unverified HTTPS (intentional for ALM)

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
